--- a/RelyingParty.Node/views/index.ejs
+++ b/RelyingParty.Node/views/index.ejs
@@ -1,5 +1,8 @@
 <% if (!user) { %>
     <h2>Welcome! Please log in.</h2>
+    <p>
+        <a href="/login">Login</a>
+    </p>
     <% } else { %>
     <h2>Hello, <%= user["http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"] %>.</h2>
     <% } %>
